[package]
name = "anslatortray"
version = "0.2.0"
description = "A simple Rust library to translate from English to Pig Latin!"
authors = ["John Zacarias Jekel <john@jekel.ca>"]
readme = "README.md"
#homepage = ""
repository = "https://git.jekel.ca/JZJ/anslatortray-rs"
license = "MIT"
license-file = "LICENSE"
edition = "2021"
keywords = ["pig", "latin", "text", "translate", "translator"]
categories = ["text-processing", "command-line-utilities", "localization"]
default-run = "anslatetray"

[features]
default = []
nightly-features = []

[lib]
name = "anslatortray"
path = "src/lib.rs"

[[bin]]
name = "anslatetray"
path = "src/anslatetray.rs"

[[bin]]
name = "anslatetray-file"
path = "src/anslatetray-file.rs"

#[features]
#default = ["default_style_way"]
#default_style_way = []
#default_style_yay = []

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
strip = true
overflow-checks = false
panic = "abort"
lto = true

[profile.release-with-debug]
inherits = "release"
strip = false
overflow-checks = false
panic = "abort"
lto = false
debug = true
