[package]
name = "anslatortray"
version = "0.5.0"
description = "A simple Rust library to translate from English to Pig Latin!"
authors = ["John Zacarias Jekel <john@jekel.ca>"]
readme = "README.md"
#homepage = ""
repository = "https://git.jekel.ca/JZJ/anslatortray-rs"
license = "MIT"
#license-file = "LICENSE"
edition = "2021"
keywords = ["pig", "latin", "text", "translate", "translator"]
categories = ["text-processing", "command-line-utilities", "localization"]
default-run = "anslatortray"
documentation = "https://docs.rs/anslatortray/latest/anslatortray/"

[features]
default = []
nightly-features = ["nightly-features-benches"]
nightly-features-benches = []

[lib]
name = "anslatortray"
path = "src/lib.rs"

[[bin]]
name = "anslatortray"
path = "src/anslatortray.rs"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
strip = true
overflow-checks = false
panic = "abort"
lto = true

[profile.release-with-debug]
inherits = "release"
strip = false
overflow-checks = false
panic = "abort"
lto = false
debug = true
